target_sources(Sierra PRIVATE
    Buffer.cpp
    Buffer.h
    CommandBuffer.cpp
    CommandBuffer.h
    ComputePipeline.cpp
    ComputePipeline.h
    Device.cpp
    Device.h
    GraphicsPipeline.cpp
    GraphicsPipeline.h
    Image.cpp
    Image.h
    Renderer.cpp
    Renderer.h
    RenderingContext.h
    RenderingResource.h
    RenderPass.cpp
    RenderPass.h
    ResourceTable.cpp
    ResourceTable.h
    Sampler.cpp
    Sampler.h
    Shader.cpp
    Shader.h
    Swapchain.cpp
    Swapchain.h
)

if(SIERRA_BUILD_VULKAN)
    add_subdirectory(Platform/Vulkan)
endif()
if(SIERRA_BUILD_METAL)
    add_subdirectory(Platform/Metal)
endif()