target_sources(Sierra PRIVATE
    Buffer.cpp
    Buffer.h
    CommandBuffer.cpp
    CommandBuffer.h
    ComputePipeline.cpp
    ComputePipeline.h
    Device.cpp
    Device.h
    DeviceErrors.cpp
    DeviceErrors.h
    GraphicsPipeline.cpp
    GraphicsPipeline.h
    Image.cpp
    Image.h
    Queue.cpp
    Queue.h
    Renderer.cpp
    Renderer.h
    RenderingBackendType.h
    RenderingContext.cpp
    RenderingContext.h
    RenderingResource.h
    RenderPass.cpp
    RenderPass.h
    ResourceTable.cpp
    ResourceTable.h
    Sampler.cpp
    Sampler.h
    Shader.cpp
    Shader.h
    Swapchain.cpp
    Swapchain.h
    SwapchainEvents.cpp
    SwapchainEvents.h
)

if(SIERRA_BUILD_VULKAN)
    add_subdirectory(Vulkan)
endif()
if(SIERRA_BUILD_METAL)
    add_subdirectory(Metal)
endif()